# bazel-rust-protos

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  WORKSPACE.bazel
greeter/client/: BUILD.bazel  greeter_client.cc  greeter_client.rs
greeter/public/: BUILD.bazel  build.rs  greeter.proto
greeter/server/: BUILD.bazel  greeter_server.rs
