load("@rules_rust//rust:defs.bzl", "rust_library")
load("@rules_rust//cargo:cargo_build_script.bzl", "cargo_build_script")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")

# Overall protobuf library.
proto_library(
    name = "greeter_protos",
    srcs = ["greeter.proto"],
    visibility = ["//visibility:public"],
)

# Rust proto lib.
rust_library(
    name = "greeter_grpc_rs",
    srcs = ["greeter.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_build_script",
        "//third_party:prost",
        "//third_party:tonic",
    ],
)

cargo_build_script(
    name = "proto_build_script",
    srcs = ["build.rs"],
    build_script_env = {
        #  "PROTOC": "$(@rules_proto//toolchain:protoc)",
    },
    data = [":greeter_protos"],
    deps = ["//third_party:tonic_build"],
)

# C++
cpp_grpc_library(
    name = "greeter_grpc_cc",
    protos = [":greeter_protos"],
    visibility = ["//visibility:public"],
)
