load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

rust_binary(
    name = "greeter_server",
    srcs = ["greeter_server.rs"],
    deps = [
        "//greeter/public:greeter_grpc_rs",
        "//third_party:tokio",
        "//third_party:tonic",
    ],
)

# build with the :greeter_server_image.tar target to get the full image archive.
container_image(
    name = "greeter_server_image",
    base = "@image_base//image",
    cmd = ["/greeter_server"],
    files = [":greeter_server"],
    user = "nobody:nobody",
)
